Refactor /jobs endpoint
* Return customer's display_name and ethereum_address
* Introduce JobDTO as a returning value from endpoints
* Add extra validations to budget and duration
